<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        style="@style/stndt_header" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:id="@+id/mainNameEditText"
        android:hint="@string/enter_your_name"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainEmailEditText"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_cell"
            android:inputType="phone"
            android:id="@+id/cell"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:layout_weight="1"
            android:inputType="phone"
            android:id="@+id/phone"/>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:id="@+id/autoCompleteTextView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_size"
        android:hint="@string/message"
        android:id="@+id/messageEditText"
        android:layout_weight="1"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/sendBtn"
    android:text="@string/send"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendAnotherBtn"
        android:text="@string/send_another_page"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_date"
        android:onClick="dateSelected"
        />

</LinearLayout>
</ScrollView>